--- a/test/cpp/Makefile
+++ b/test/cpp/Makefile
@@ -1,2 +1,2 @@
 harness: harness.cpp ../../cpp/Negentropy.h
-	g++ -g -std=c++20 -I../../cpp/ -I ./hoytech-cpp/ harness.cpp -lcrypto -o harness
+	g++ -g -Wall -std=c++20 -I../../cpp/ -I ./hoytech-cpp/ harness.cpp -lcrypto -o harness
