--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "test/cpp/hoytech-cpp"]
 	path = test/cpp/hoytech-cpp
 	url = https://github.com/hoytech/hoytech-cpp.git
+[submodule "test/cpp/lmdbxx"]
+	path = test/cpp/lmdbxx
+	url = https://github.com/hoytech/lmdbxx.git
