--- a/test/cpp/Makefile
+++ b/test/cpp/Makefile
@@ -1,2 +1,5 @@
-harness: harness.cpp ../../cpp/negentropy.h ../../cpp/negentropy/*
+harness: harness.cpp ../../cpp/negentropy.h ../../cpp/negentropy/* ../../cpp/negentropy/storage/*
 	g++ -g -Wall -std=c++20 -I../../cpp/ -I ./hoytech-cpp/ harness.cpp -lcrypto -o harness
+
+btree: btree.cpp ../../cpp/negentropy.h ../../cpp/negentropy/* ../../cpp/negentropy/storage/*
+	g++ -g -Wall -std=c++20 -I../../cpp/ -I ./hoytech-cpp/ btree.cpp -lcrypto -o btree
