Revert "cpp get rid of end on findLowerBound"
This reverts commit 9f8a52e417feab775a2505e31babe75d3165a7cd.

--- a/test/cpp/Makefile
+++ b/test/cpp/Makefile
@@ -27,4 +27,4 @@ subRange: subRange.cpp
 all: harness btreeFuzz lmdbTest measureSpaceUsage subRange
 
 clean:
-	rm -f harness btreeFuzz lmdbTest measureSpaceUsage subRange
+	rm -f harness btreeFuzz lmdbTest measureSpaceUsage
