feat: add C wrapper and makefile

--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -1,12 +1,16 @@
 # Build a shared library of negentropy
 
 #TODO: Need to add compilation flags based on OS
-INCS	= -I./ -I/opt/homebrew/include/
+INCS	= -I./ -I/opt/homebrew/include/ 
 TARGET  = libnegentropy.so
 
-.PHONY: all clean
+.PHONY: all clean install-deps
 
-all: negentropy-cpp shared-lib
+all: negentropy-cpp c-wrapper shared-lib 
+
+#TODO: Need to add compilation flags based on OS
+install-deps:
+	brew install lmdb openssl
 
 shared-lib: negentropy.o
 	g++ -o $(TARGET) negentropy.o -shared
@@ -14,6 +18,8 @@ shared-lib: negentropy.o
 negentropy-cpp:
 	g++ negentropy.h --std=c++20 -o negentropy.o $(INCS)
 
+c-wrapper:
+	g++ negentropy_wrapper.h --std=c++20 -o negentropy_wrapper.o $(INCS) -I../test/cpp/lmdbxx/include/
 
 clean: 
 	rm -f negentropy.o
