--- a/cpp/example/Makefile
+++ b/cpp/example/Makefile
@@ -1,4 +1,4 @@
 .PHONY: all
 
 all: 
-	g++ --std=c++20 test.c -I../ -lnegentropy -lcrypto -L../
+	g++ --std=c++20 test.c -I../ -lnegentropy -lcrypto -L../ -L/opt/homebrew/lib/ -Wc++11-narrowing
