chore: example code to test C wrapper

--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -14,10 +14,10 @@ install-deps:
 
 # Generate 'negentropy.h.gch'
 precompiled-header:
-	g++ --std=c++20 -Wall -fexceptions -g negentropy.h $(INCS)
+	g++ -O0 --std=c++20 -Wall -fexceptions -g negentropy.h $(INCS)
 
 shared-lib:
-	g++ --std=c++20 $(INCS) -shared -fPIC -o $(TARGET) negentropy_wrapper.c -lcrypto -lssl -L/opt/homebrew/lib/
+	g++ -O0 -g -std=c++20 $(INCS) -shared -fPIC -o $(TARGET) negentropy_wrapper.c -lcrypto -lssl -L/opt/homebrew/lib/
 
 clean:
 	rm -f $(TARGET) negentropy.h.gch libnegentropy.so
