--- a/c/Makefile
+++ b/c/Makefile
@@ -2,7 +2,8 @@
 
 # Define the root directory of the negentropy project; this absolute path mechanism works across all major os
 NEGENTROPY_ROOT := $(dir $(abspath $(lastword $(MAKEFILE_LIST))))
-INCS	= -I$(NEGENTROPY_ROOT) -I/opt/homebrew/include/ -I$(NEGENTROPY_ROOT)/vendor/lmdbxx/include/
+NEGENTROPY_CPP_ROOT := ../cpp/
+INCS	= -I$(NEGENTROPY_CPP_ROOT) -I/opt/homebrew/include/ -I$(NEGENTROPY_ROOT)/vendor/lmdbxx/include/
 
 ifeq ($(OS),Windows_NT)
 	TARGET  = libnegentropy.dll
@@ -20,10 +21,10 @@ install-deps:
 
 # Generate 'negentropy.h.gch'
 precompiled-header:
-	g++ -O0 --std=c++20 -Wall -fexceptions -g $(NEGENTROPY_ROOT)negentropy.h $(INCS)
+	g++ -O0 --std=c++20 -Wall -fexceptions -g $(NEGENTROPY_CPP_ROOT)negentropy.h $(INCS)
 
 shared-lib:
 	g++ -O0 -g -std=c++20 $(INCS) -shared -fPIC -o $(TARGET) $(NEGENTROPY_ROOT)negentropy_wrapper.cpp -lcrypto -lssl -L/opt/homebrew/lib/
 
 clean:
-	rm -f $(TARGET) negentropy.h.gch libnegentropy.so
+	rm -f $(TARGET) $(NEGENTROPY_CPP_ROOT)/negentropy.h.gch libnegentropy.so
